--- a/PhongKham/compilerconfig.json
+++ b/PhongKham/compilerconfig.json
@@ -1,8 +1,10 @@
-[
+﻿[
   {
     "outputFile": "wwwroot/css/style.css",
-    "inputFile": "wwwroot/css/style.scss",
-    "sourceMap": false,
-    "useNodeSass": false
+    "inputFile": "wwwroot/css/style.scss"
+  },
+  {
+    "outputFile": "wwwroot/js/site.es5.js",
+    "inputFile": "wwwroot/js/site.js"
   }
 ]
