--- a/PhongKham/bundleconfig.json
+++ b/PhongKham/bundleconfig.json
@@ -102,7 +102,25 @@
       "wwwroot/js/lib/jquery.smartmenus.js",
       "wwwroot/js/shared.js",
       "wwwroot/js/file/gioithieu.js"
-      
+
+    ],
+    "minify": {
+      "enabled": true,
+      "renameLocals": true
+    },
+    // Optionally generate .map file
+    "sourceMap": false
+  },
+  {
+    "outputFileName": "wwwroot/js/account-bundle.min.js",
+    "inputFiles": [
+      "wwwroot/js/lib/jquery-3.5.1.min.js",
+      "wwwroot/js/lib/jquery-ui.min.js",
+      "wwwroot/js/lib/bootstrap.min.js",
+      "wwwroot/js/lib/jquery.smartmenus.js",
+      "wwwroot/js/shared.js",
+      "wwwroot/js/file/account.js"
+
     ],
     "minify": {
       "enabled": true,
