--- a/PhongKham/appsettings.json
+++ b/PhongKham/appsettings.json
@@ -1,9 +1,22 @@
 {
+  "AppSettings": {
+    "IsDeveloper": true,
+    "IsMemCache": false,
+    "Memcached": {
+      "Servers": {
+        "Address": "210.211.124.3",
+        "Port": 11211
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=210.211.124.17;Database=Pastaxi-Developer;Uid=pasgo;Pwd=!Q2w3e4r5t@@;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  }
 }
