--- a/PhongKham/PhongKham.csproj
+++ b/PhongKham/PhongKham.csproj
@@ -7,14 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\**" />
     <Compile Remove="wwwroot\lib\fontawesome\**" />
+    <Content Remove="Data\**" />
     <Content Remove="wwwroot\lib\fontawesome\**" />
+    <EmbeddedResource Remove="Data\**" />
     <EmbeddedResource Remove="wwwroot\lib\fontawesome\**" />
+    <None Remove="Data\**" />
     <None Remove="wwwroot\lib\fontawesome\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="Data\AppDbContext.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -52,16 +52,14 @@
 
   <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
+    <PackageReference Include="Dapper" Version="2.1.28" />
+    <PackageReference Include="EnyimMemcachedCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
