--- a/PhongKham/PhongKham.csproj
+++ b/PhongKham/PhongKham.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
     <None Include="compilerconfig.json" />
     <None Include="wwwroot\css\fonts\glyphicons-halflings-regular.svg.tmp" />
     <None Include="wwwroot\css\fonts\glyphicons-halflings-regular.woff2.tmp" />
