--- a/PhongKham/appsettings.json
+++ b/PhongKham/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Authority": "https://localhost:44303/",
+    "Audience": "18100"
+  }
 }
