--- a/PhongKham/appsettings.json
+++ b/PhongKham/appsettings.json
@@ -17,10 +17,12 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Authority": "https://localhost:44303/",
-    "Audience": "18100"
+    "Key": "ThisIsASecretKeyForJwt",
+    "Issuer": "https://localhost:44303/",
+    "Authority": "PhongKham",
+    "Audience": "https://localhost:44303/"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=210.211.124.17;Database=Pastaxi-Developer;Uid=pasgo;Pwd=!Q2w3e4r5t@@;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
