authentication bằng JWT

--- a/PhongKham/appsettings.json
+++ b/PhongKham/appsettings.json
@@ -17,7 +17,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "ThisIsASecretKeyForJwt",
+    "Key": "this is my custom Secret key for authentication",
     "Issuer": "https://localhost:44303/",
     "Authority": "PhongKham",
     "Audience": "https://localhost:44303/"
