--- a/PhongKham/bundleconfig.json
+++ b/PhongKham/bundleconfig.json
@@ -27,13 +27,14 @@
       "renameLocals": true
     }
   },
-  
+
   {
     "outputFileName": "wwwroot/css/common-bundle.min.css",
     "inputFiles": [
+      "wwwroot/css/bootstrap.css",
       "wwwroot/css/file/style.css",
       "wwwroot/css/file/newstyle.css",
-      "wwwroot/css/lib/bootstrap.min.css",
+
       "wwwroot/css/lib/sm-core-css.css",
       "wwwroot/css/lib/sm-blue.css"
 
@@ -44,6 +45,8 @@
       "renameLocals": true
     }
   },
+
+  
   // js
   {
     "outputFileName": "wwwroot/js/lib.min.js",
@@ -80,7 +83,7 @@
     "inputFiles": [
       "wwwroot/js/lib/jquery-3.5.1.min.js",
       "wwwroot/js/lib/jquery-ui.min.js",
-      "wwwroot/js/lib/bootstrap.min.js",
+      "wwwroot/js/bootstrap.js",
       "wwwroot/js/lib/jquery.smartmenus.js",
       "wwwroot/js/lib/splide.min.js",
       "wwwroot/js/shared.js",
@@ -98,7 +101,7 @@
     "inputFiles": [
       "wwwroot/js/lib/jquery-3.5.1.min.js",
       "wwwroot/js/lib/jquery-ui.min.js",
-      "wwwroot/js/lib/bootstrap.min.js",
+      "wwwroot/js/bootstrap.min.js",
       "wwwroot/js/lib/jquery.smartmenus.js",
       "wwwroot/js/shared.js",
       "wwwroot/js/file/gioithieu.js"
@@ -116,7 +119,7 @@
     "inputFiles": [
       "wwwroot/js/lib/jquery-3.5.1.min.js",
       "wwwroot/js/lib/jquery-ui.min.js",
-      "wwwroot/js/lib/bootstrap.min.js",
+      "wwwroot/js/bootstrap.min.js",
       "wwwroot/js/lib/jquery.smartmenus.js",
       "wwwroot/js/shared.js",
       "wwwroot/js/file/account.js"
