--- a/PhongKham/bundleconfig.json
+++ b/PhongKham/bundleconfig.json
@@ -27,13 +27,13 @@
       "renameLocals": true
     }
   },
-
+  
   {
     "outputFileName": "wwwroot/css/common-bundle.min.css",
     "inputFiles": [
-      "wwwroot/css/lib/bootstrap.css",
       "wwwroot/css/file/style.css",
       "wwwroot/css/file/newstyle.css",
+      "wwwroot/css/lib/bootstrap.min.css",
       "wwwroot/css/lib/sm-core-css.css",
       "wwwroot/css/lib/sm-blue.css"
 
@@ -44,8 +44,6 @@
       "renameLocals": true
     }
   },
-
-  
   // js
   {
     "outputFileName": "wwwroot/js/lib.min.js",
@@ -82,7 +80,7 @@
     "inputFiles": [
       "wwwroot/js/lib/jquery-3.5.1.min.js",
       "wwwroot/js/lib/jquery-ui.min.js",
-      "wwwroot/js/lib/bootstrap.js",
+      "wwwroot/js/lib/bootstrap.min.js",
       "wwwroot/js/lib/jquery.smartmenus.js",
       "wwwroot/js/lib/splide.min.js",
       "wwwroot/js/shared.js",
