--- a/PhongKham/bundleconfig.json
+++ b/PhongKham/bundleconfig.json
@@ -68,6 +68,7 @@
   {
     "outputFileName": "wwwroot/js/home-bundle.min.js",
     "inputFiles": [
+      "wwwroot/js/lib/jquery-3.5.1.min.js",
       "wwwroot/js/lib/splide.min.js",
       "wwwroot/js/file/home.js"
     ],
@@ -79,6 +80,7 @@
   {
     "outputFileName": "wwwroot/js/gioithieu-bundle.min.js",
     "inputFiles": [
+      "wwwroot/js/lib/jquery-3.5.1.min.js",
       "wwwroot/js/file/gioithieu.js"
     ],
     "minify": {
@@ -89,6 +91,7 @@
   {
     "outputFileName": "wwwroot/js/account-bundle.min.js",
     "inputFiles": [
+      "wwwroot/js/lib/jquery-3.5.1.min.js",
       "wwwroot/js/file/account.js"
     ],
     "minify": {
